--- a/Lab8/app/index.html
+++ b/Lab8/app/index.html
@@ -3,32 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ScienceJournal</title>
-    <style>
-		body {
-			white-space: pre-line;
-		}
-	</style>
+    <link rel="stylesheet" href="style.css" type="text/css">
 	<script type="module">
-		import './script.js';
+		import './main.js';
 	</script>
 </head>
 <body>
-	<button id="btnArticlesList">Список статей</button>
-	<div>
-		<input id="inputArticlesTitle">
-		<button id="btnArticlesTitle">Поиск по названию</button>
-	</div>
-	<div>
-		<select  id="selectAuthorArticles">
-			<option>Иванов Иван</option>
-			<option>Марк Цукерберг</option>
-			<option>Стив Джобс</option>
-			<option>Билл Гейтс</option>
-			<option>Тони Старк</option>
-			<option>Продуктивный чувак</option>
-		</select>
-		<button id="btnAuthorArticles">Поиск по автору</button>
-	</div>
-	<span id="articles"></span>
 </body>
 </html>
